# agent-vm-controller

./: .env-sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vsi_client.py
commands/: base.py  list.py  start.py  stop.py
docs/: architecture.md
src/: main.py
src/dtos/: __init__.py  vsi.py
src/services/: __init__.py  vsi_client.py
src/services/commands/: __init__.py  base.py  ibm_vpc_client.py  list.py  start.py  stop.py
tests/: test_vsi_controller.py
